--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,18 +2,18 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: Kenneth Michael Jabon
     - name: Date of Birth
-      value: 14th March 1879
+      value: 9th November 1993
     - name: Languages
-      value: English, German
+      value: English, Spanish
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: M.S.
+      institution: Boston University, Boston, MA, USA
+      year: 2020
       description:
         - Description 1.
         - Description 2.
