--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ icon: ⚛️  # the emoji used as the favicon (alternatively, provide image name
 
 url: https://kjabon.github.io # the base hostname & protocol for your site
 baseurl:  # the subpath of your site, e.g. /blog/
-last_updated: false # set to true if you want to display last updated in the footer
+last_updated: true # set to true if you want to display last updated in the footer
 impressum_path:  # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
 
 # -----------------------------------------------------------------------------
@@ -41,7 +41,7 @@ repo_theme_dark: dark           # https://github.com/anuraghazra/github-readme-s
 # will use title and url fields
 # Take a look to https://github.com/jekyll/jekyll-feed for more customization
 
-rss_icon: true
+rss_icon: false
 
 # -----------------------------------------------------------------------------
 # Layout
@@ -73,8 +73,8 @@ twitter_username:  # your Twitter handle
 mastodon_username: # your mastodon instance+username in the format instance.tld/@username
 linkedin_username: kenneth-jabon # your LinkedIn user name
 telegram_username: kjabon # your Telegram user name
-scholar_userid: 6soxD1EAAAAJ # your Google Scholar ID
-semanticscholar_id: 1658910105 # your Semantic Scholar ID
+scholar_userid: #6soxD1EAAAAJ # your Google Scholar ID
+semanticscholar_id: #1658910105 # your Semantic Scholar ID
 whatsapp_number: # your WhatsApp number (full phone number in international format. Omit any zeroes, brackets, or dashes when adding the phone number in international format.)
 orcid_id: # your ORCID ID
 medium_username: # your Medium username
@@ -98,7 +98,7 @@ youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 discord_id: # your discord id (18-digit unique numerical identifier)
 
 contact_note: >
-  For work-related inquiries: Please use email, I rarely check LinkedIn.
+  Don't hesitate to get in touch with job opportunities applying or developing RL!
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
