--- a/_config.yml
+++ b/_config.yml
@@ -94,7 +94,7 @@ youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 discord_id: # your discord id (18-digit unique numerical identifier)
 
 contact_note: >
-  Don't hesitate to get in touch with job opportunities applying or developing RL!
+  Don't hesitate to get in touch with job opportunities applying or developing RL! (Email is preferred means)
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
@@ -238,7 +238,7 @@ jekyll-archives:
     tag: '/blog/tag/:name/'
     category: '/blog/category/:name/'
 
-display_tags: ['formatting', 'images', 'links', 'math', 'code'] # this tags will be dispalyed on the front page of your blog
+display_tags: ['rl', 'habits', 'photonics', 'gamedev'] # this tags will be dispalyed on the front page of your blog
 
 # -----------------------------------------------------------------------------
 # Jekyll Scholar
